# haskell-language-server

./: cabal.project  haskell-language-server.cabal  stack.yaml
plugins/hls-simpletac-plugin/: NOTES.md  README.md  hls-simpletac-plugin.cabal
plugins/hls-simpletac-plugin/src/Ide/Plugin/: Simpletac.hs
plugins/hls-simpletac-plugin/test/: Main.hs
src/: HlsPlugins.hs
