cabal-version:      2.4
category:           Development
name:               hls-simpletac-plugin
version:            0.1.0.0
synopsis:           Simple tactics plugin for Haskell Language Server
description:
  Please see the README on GitHub at <https://github.com/haskell/haskell-language-server#readme>
author:             Eric Conlon, Sandy Maguire, Reed Mullanix
maintainer:         ejconlon@gmail.com
license:            Apache-2.0
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  README.md
  test/golden/*.hs

source-repository head
    type:     git
    location: https://github.com/haskell/haskell-language-server.git

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Ide.Plugin.Simpletac

  ghc-options:
    -Wall -Wno-name-shadowing -Wredundant-constraints
    -Wno-unticked-promoted-constructors
    -- -Werror

  build-depends:
    , base            >=4.12 && <5
    , aeson           >=2.1 && <3
    , ghcide          >=1.9 && <2
    , hls-plugin-api  >=1.6 && <2
    , lsp-types       >=1.6 && <2
    , text            >=1.2 && <2
    , hashable        >=1.4 && <2
    , deepseq         >=1.4 && <2

  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    NumDecimals
    OverloadedLabels
    PatternSynonyms
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

test-suite tests
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  main-is:            Main.hs

  hs-source-dirs: test
  ghc-options:
    -Wall -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N

  build-depends:
    -- , aeson
    , base
    -- , containers
    -- , deepseq
    -- , directory
    -- , filepath
    -- , ghc
    -- , ghcide
    -- , hls-plugin-api
    , hls-simpletac-plugin
    -- , hls-test-utils      ^>=1.5
    -- , hspec
    -- , hspec-expectations
    -- , lens
    -- , lsp-types
    -- , mtl
    -- , QuickCheck
    -- , tasty-hspec
    , tasty
    , tasty-hunit
    , text
